# neobot

./: .gitignore
neo_msgs/: CMakeLists.txt  package.xml
neo_msgs/msg/: Imu.msg  PID.msg  Vel.msg
neobot_base/: CMakeLists.txt  package.xml
neobot_base/src/: neobot_base.cpp
neobot_bringup/: CMakeLists.txt  package.xml
neobot_bringup/launch/: bringup.launch  laser.launch  minimal.launch
neobot_bringup/launch/includes/: description.launch
neobot_bringup/launch/includes/imu/: imu.launch
neobot_bringup/launch/includes/laser/: lds.launch  rplidar.launch  ydlidar.launch
neobot_bringup/param/ekf/: robot_localization-noimu.yaml
neobot_config/: CMakeLists.txt  package.xml
neobot_description/: CMakeLists.txt  package.xml
neobot_description/launch/: visualize_rviz.launch
neobot_description/rviz/: neobot.rviz  visualize.rviz
neobot_description/urdf/: gen_urdf  neobot.urdf  neobot.xacro  neobot_gazebo.xacro
neobot_simulation/: CMakeLists.txt  package.xml
neobot_simulation/launch/: gazebo.launch
